package teammates.common.datatransfer.attributes;

/**
 * Interface for SessionResults, to be used for grouping
 * or listing results bundle together
 * Current implementing classes:
 * - {@link StudentResultBundle}
 * - {@link FeedbackSessionResultsBundle}
 */
public interface SessionResultsBundle {

}
